--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "google/cloud-firestore": "^1.41",
+        "grpc/grpc": "1.38",
         "guzzlehttp/guzzle": "^7.2",
         "kreait/laravel-firebase": "^5.6",
         "laravel/framework": "^10.10",
